--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 requests>=2.4.0
 websocket-client>=0.22.0,<=0.44.0
-slacker>=0.9.50
+# slacker is forked locally into the slacker directory to pull in support for blocks
+# see the readme in the slacker directory for more information
+#slacker>=0.9.50
 six>=1.10.0
 pytest>=2.9.1
