--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ requests>=2.4.0
 websocket-client>=0.22.0,<=0.44.0
 # slacker is forked locally into the slacker directory to pull in support for blocks
 # see the readme in the slacker directory for more information
-#slacker>=0.9.50
+#slacker>=0.13.0.UNRELEASED
 pytest>=2.9.1
+pygerduty>=0.38.2
+pytz>=2019.3
+humanize>=0.5.1
