--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,8 @@
 [bumpversion]
-current_version = 0.5.5
+current_version = 0.5.3
 commit = True
 tag = True
 tag_name = {new_version}
 
-[bumpversion:file:slackbot/VERSION]
+[bumpversion:file:oncall_slackbot/VERSION]
 
