Remove oncall-slackbot portions, keep yuri only

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,8 @@
 [bumpversion]
-current_version = 1.0.3
+current_version = 1.0.0
 commit = True
 tag = True
 tag_name = {new_version}
 
-[bumpversion:file:oncall_slackbot/VERSION]
+[bumpversion:file:yuri/VERSION]
 
