--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,1 @@
-# slacker is forked locally into the slacker directory to pull in support for blocks
-# see the readme in the slacker directory for more information
-slackbot==0.5.5
-pygerduty>=0.38.2
-pytz>=2019.3
-humanize>=0.5.1
-spacy==2.2.3
+inquirer>=2.6.3
