--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 .idea
-.env
+*.env
 /.tox/
 *.pyc
 *#
 *~
 *.swp
 #*
-local_settings.py
-local_test_settings.py
-slackbot_settings.py
-slackbot_test_settings.py
 /build
 /dist
 /*.egg-info
