--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = -s -v --ignore=build --ignore=dist --ignore=slackbot.egg-info --ignore=setup.py
+addopts = -s -v --ignore=build --ignore=dist --ignore=yuri.egg-info --ignore=setup.py
